--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
+    <meta charset="ISO-8859-1">
     <title>Registration</title>
     <!-- CSS only -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
 </head>
 <body>
 
@@ -23,6 +24,9 @@
                     Login Module</a></div></div></nav>
 
     <!--create HTML registration form-->
+    <br>
+    <br>
+
 
     <div class="container">
         <div class="row">
@@ -47,8 +51,7 @@
                         <label for="email" class="control-label">E-mail</label> <input
                             id="email" class="form-control" th:field="*{email}" required autofocus="autofocus" />
                     </div>
-                    <div class="form-group"
-                         th:classappend="${#fields.hasErrors('password')}? 'has-error':''">
+                    <div class="form-group">
                         <label for="password" class="control-label">Password</label>
                         <input id="password" class="form-control" type="password"
                             th:field="*{password}" />
