--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="ISO-8859-1">
     <title>Registration and Login App</title>
-
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
@@ -12,7 +11,6 @@
 </head>
 <body>
 
-<!-- create navigation bar ( header) -->
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
@@ -56,9 +54,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="password">Password</label>: <input type="password"
-                                                                   id="password" name="password" class="form-control"
-                                                                   placeholder="Enter Password" />
+                    <label for="password">Password</label>: <input type="password" id="password" name="password" class="form-control" placeholder="Enter Password" />
                 </div>
 
                 <div class="form-group">
