--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -54,7 +54,8 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="password">Password</label>: <input type="password" id="password" name="password" class="form-control" placeholder="Enter Password" />
+                    <label for="password">Password</label>:
+                    <input type="password" id="password" name="password" class="form-control" placeholder="Enter Password" />
                 </div>
 
                 <div class="form-group">
